# redflag

./: .gitignore  Cargo.toml  PATTERN_GUIDE.md  README.md  redflag.example.toml
.github/workflows/: ci.yml
examples/: redflag.example.toml
src/: config.rs  error.rs  git_scanner.rs  main.rs  output.rs  scanner.rs
test/: test_secrets.ts
tests/integration/: cli_tests.rs
tests/testdata/: aws_credentials.txt
