[package]
name = "redflag"
version = "0.1.0"
edition = "2021"
authors = ["BuggyCorp <hello@buggycorp.com>"]
description = "Lightweight secret scanner for codebases"
license = "MIT"
repository = "https://github.com/BuggyCorp/redflag"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
regex = "1.9"
ignore = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
base64 = "0.21"
serde_json = "1.0"
sarif-rs = "0.3"
chrono = "0.4"