[package]
name = "redflag"
version = "0.1.0"
edition = "2021"
authors = ["BuggyCorp <hello@buggycorp.com>"]
description = "Lightweight secret scanner for codebases"
license = "MIT"
repository = "https://github.com/BuggyCorp/redflag"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
regex = "1.9"
ignore = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
base64 = "0.21"
encoding_rs = "0.8"
thiserror = "1.0"
serde_json = "1.0"
serde-sarif = { git = "https://github.com/psastras/sarif-rs" }
chrono = "0.4"
tempfile = "3.3"
git2 = { version = "0.20.0", features = ["vendored-openssl"] }
bstr = "1.9.0"
log = "0.4"
env_logger = "0.11"
glob = "0.3"